--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -5,7 +5,8 @@
 <%= render :partial => 'layouts/navigation' %>
 <article>
   <div id="tweetbox">
-    <h2><a href="http://twitter.com/wafflestudio" title="Wafflestudio">@wafflestudio</a>'s Latest Tweets</h2>
+    <h3>@wafflestudio</h3>
+		<a target="_blank" href="http://twitter.com/wafflestudio" title="Wafflestudio" id="follow_us"></a>
     <ul id="tweets">
     </ul>
   </div>
