--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -6,7 +6,7 @@
 <article>
   <div id="tweetbox">
     <h3>@wafflestudio</h3>
-		<a target="_blank" href="http://twitter.com/wafflestudio" title="Wafflestudio" id="follow_us"></a>
+		<a target="_blank" href="http://twitter.com/wafflestudio" title="follow Wafflestudio on Twitter" id="follow_us"></a>
     <ul id="tweets">
     </ul>
   </div>
