--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -2,22 +2,22 @@
   <div class="text_fields">
     <%= label_tag 'contact_name', 'Name :' %>
     <div class="text_input_wrapper">
-      <%= f.text_field :name, {:placeholder => 'John Doe', :class => 'text_input', :title => '이름을 입력해 주세요.'} %>
+      <%= f.text_field :name, {:class => 'text_input', :title => '이름을 입력해 주세요.'} %>
     </div>
     <%= label_tag 'contact_email', 'Email :' %>
     <div class="text_input_wrapper">
-      <%= f.email_field :email, {:placeholder => 'johndoe@example.com', :class => 'text_input', :title => '답변을 받으실 이메일을 입력해 주세요.'} %>
+      <%= f.email_field :email, {:class => 'text_input', :title => '답변을 받으실 이메일을 입력해 주세요.'} %>
     </div>
     <%= label_tag 'contact_phone', 'Phone :' %>
     <div class="text_input_wrapper">
-      <%= f.phone_field :phone, {:placeholder => '010-1234-5678', :class => 'text_input', :title => '빠른 답변이 필요하시면<br />전화번호를 남겨주시기 바랍니다.'} %>
+      <%= f.phone_field :phone, {:class => 'text_input', :title => '빠른 답변이 필요하시면<br />전화번호를 남겨주시기 바랍니다.'} %>
     </div>
   </div>
   <div class="text_area">
     <%= label_tag 'contact_message', 'Message :' %>
     <div class="text_area_wrapper">
-      <%= f.text_area :message, {:placeholder => 'Say hello', :title => '문의하실 내용을 입력해 주세요.'} %>
+      <%= f.text_area :message, {:title => '문의하실 내용을 입력해 주세요.'} %>
     </div>
-    <%= f.submit 'ok' %>
+    <%= f.submit 'go!' %>
   </div>
 <% end %>
