--- a/app/views/layouts/_about_us.html.erb
+++ b/app/views/layouts/_about_us.html.erb
@@ -4,6 +4,8 @@
 <%= render :partial => 'layouts/navigation', :locals => {:cur => 'about_us'} %>
 <article>
 
+	<h2>청년, 웹을 만들다.</h2>
+
   <div id="timeline">
     <ul>
     <% start_date = Date.new(2007)
