--- a/app/views/layouts/_project_list.html.erb
+++ b/app/views/layouts/_project_list.html.erb
@@ -6,7 +6,7 @@
   <ul id="project_list">
   <% @projects.each do |project| %>
     <li id="project_<%= project.id%>" data-id="<%= project.id %>" class="project">
-      <%= image_tag project.screenshots.first.image.url(:middle) %>
+      <%= image_tag project.screenshots.first.image.url(:middle), {'data-id' => project.id} %>
       <span class="name"><%= project.name %></span>
     </li>
   <% end %>
