project page.. ing
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@51 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -26,6 +26,10 @@
 				<td class="last"><%= f.text_field 'name' %></td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>프로젝트 부제</strong></td>
+				<td class="last"><%= f.text_field 'subtitle' %></td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>설명</strong></td>
 				<td class="last"><%= f.text_area 'description' %></td>
 			</tr>
