--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
       <%= render :partial => 'layouts/contact' %>
     </section>
   </div>
+  <a href="#top" id="top">top</a>
   <%= render :partial => 'layouts/tweet_template' %>
   <%= render :partial => 'layouts/member_template' %>
   <%= render :partial => 'layouts/project_template' %>
