--- a/app/views/admin/projects/_form_edit.html.erb
+++ b/app/views/admin/projects/_form_edit.html.erb
@@ -26,6 +26,10 @@
 				<td class="last"><%= f.text_field 'name' %></td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>프로젝트 부제</strong></td>
+				<td class="last"><%= f.text_field 'subtitle' %></td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>설명</strong></td>
 				<td class="last"><%= f.text_area 'description' %></td>
 			</tr>
