--- a/public/stylesheets/slider.css
+++ b/public/stylesheets/slider.css
@@ -1,10 +1,33 @@
 #thefron_box {
 	position: absolute;
-	top: 200px;
-	left: 100px;
-	width: 600px;
+	top: 180px;
+	left: 30px;
+	width: 740px;
 	height: 300px;
 }
 .thefron_img_container {
 	margin: 0px 10px;
+	position: relative;
+	cursor: pointer;
+}
+.thefron_img_caption {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	color: white;
+	/*background: rgba(118,77,31,0.58);*/
+	background: rgba(0,0,0,0.7);
+	width: 100%;
+}
+.thefron_img_caption .name {
+	margin: 10px;
+	font-size: 25px;
+	font-weight: bold;
+	color: white;
+}
+.thefron_img_caption .subtitle {
+	margin: 10px;
+	font-size: 15px;
+	font-weight: bold;
+	color: #FAA46B;
 }
