--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -502,6 +502,7 @@ a.nivo-prevNav {
 /*project section start*/
 #projects {
 	margin-top: 320px;
+	background: url(/images/backgrounds/dev_process.png) no-repeat 50% 410px;
 }
 #projects h1 {
 	width: 281px;
@@ -773,4 +774,17 @@ footer {
   background: url(/images/tweet-loader.gif);
   background: url(/images/pdf.png);
   background: url(/images/colorbox/arrows.png);
+}
+#top {
+	position: fixed;
+	bottom: 20px;
+	width: 59px;
+	height: 59px;
+	background: url(/images/buttons/top.png) no-repeat 0px -59px;
+	text-indent: -9999px;
+	display: block;
+	left: 50%;
+}
+#top.hover {
+	background: url(/images/buttons/top.png) no-repeat;
 }
