parallax movement on footer image
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@52 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<![endif]-->
   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag :jquery %>
-  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'application'] %>
+  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'parallax', 'application'] %>
 </head>
 <body>
   <div id="container">
@@ -35,6 +35,8 @@
     <section id="contact">
       <%= render :partial => 'layouts/contact' %>
     </section>
+		<footer>
+		</footer>
   </div>
   <a href="#top" id="top">top</a>
   <%= render :partial => 'layouts/tweet_template' %>
