--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -13,7 +13,7 @@
   <div id="carousel">
     <div id="slider">
     <% @carousels.each do |carousel| %>
-    	<a href="#" onclick="slider_action(event, <%= "'#{carousel.action[:type]}', '#{carousel.action[:value]}'" %>)" ><%= image_tag carousel.c_image.url %></a>
+    	<a href="#" onclick="slider_action(<%= "'#{carousel.action[:type]}', '#{carousel.action[:value]}'" %>);return false" ><%= image_tag carousel.c_image.url %></a>
     <% end %>
     </div>
   </div>
