--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <h1>Wafflestudio</h1>
+  <h1><a href="/">Wafflestudio</a></h1>
   <h2>We design develop delicious WEB</h2>
 </header>
 <%= render :partial => 'layouts/navigation' %>
