about us sample
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@54 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/_about_us.html.erb
+++ b/app/views/layouts/_about_us.html.erb
@@ -4,7 +4,24 @@
 <%= render :partial => 'layouts/navigation', :locals => {:cur => 'about_us'} %>
 <article>
 
-	<h2>청년, 웹을 만들다.</h2>
+	<hgroup>
+		<h2>맛있는 웹을 향한 열정!</h2>
+		<h3>blah</h3>
+	</hgroup>
+	<ul id="about_us_body">
+		<li>
+			<h4>와플스튜디오는.</h4>
+			<p>와플스튜디오는 사용자를 위한 맛있는 서비스를 지향합니다. 신선하고 재밌고, 유용한 서비스라면 웹 만들어내기 위해 우리는 오늘도 머리를 맞대고 있습니다.</p>
+		</li>
+		<li>
+			<h4>그대의 아이디어 + 우리의 열정</h4>
+			<p>와플스튜디오. 새로운 아이디어가 생겨나고 기술을 만나 현실이 되는 곳입니다. 아이디어는 우리의 열정과 기술을 만나고, 사람들은 새로운 이론과 기술을 끊임없이 터득하는 곳입니다. 서비스의 운영과 사용자들의 소통은 와플스튜디오의 중요한 경험의 밑거름입니다.</p>
+		</li>
+		<li>
+			<h4>'함께'의 힘이 이뤄지는 곳.</h4>
+			<p>와플스튜디오는 '같이'의 가치를 중시합니다. 아이디어를 생각해내고, 실제로 웹서비스를 만들어 사용자들에게 서비스하기까지, 모든 과정은 열정적인 토론과 든든한 팀웍으로 이뤄집니다. 한명의 열걸음보다는 열명의 한걸음의 소중함을 아는 사람들, 와플스튜디오입니다.</p>
+		</li>
+	</ul>
 
   <div id="timeline">
     <ul>
