--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -8,6 +8,7 @@
     <h3>@wafflestudio</h3>
 		<a target="_blank" href="http://twitter.com/wafflestudio" title="follow Wafflestudio on Twitter" id="follow_us"></a>
     <ul id="tweets">
+			<li class="loading">Loading tweets...</li>
     </ul>
   </div>
   <div id="carousel">
