--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -2,6 +2,7 @@
 <p><%= flash[:notice] %></p>
 <p><%= flash[:error] %></p>
 <%= link_to image_tag('admin/add-icon.gif')+"새 멤버", new_admin_member_path %>
+<p>섬네일 사진, 전신 사진은 배경 하얗게. 적어도 모서리는 하얀색이어야 함.<br />전신 사진은 위아래 트림을 최대한 많이 해야 사진이 크게 보임</p>
 <div class="table">
 	<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
 	<img src="/images/admin/bg-th-right.gif" width="7" height="7" alt="" class="right" />
