--- a/public/stylesheets/colorbox.css
+++ b/public/stylesheets/colorbox.css
@@ -7,7 +7,7 @@
 #cboxOverlay{position:fixed; width:100%; height:100%;}
 #cboxMiddleLeft, #cboxBottomLeft{clear:left;}
 #cboxContent{position:relative; overflow:hidden;}
-#cboxLoadedContent{overflow:auto;}
+#cboxLoadedContent{overflow:hidden !important;}
 #cboxLoadedContent iframe{display:block; width:100%; height:100%; border:0;}
 #cboxTitle{margin:0;}
 #cboxLoadingOverlay, #cboxLoadingGraphic{position:absolute; top:0; left:0; width:100%;}
