--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Waffle Studio</title>
+  <title>WaffleStudio</title>
   <meta charset="UTF-8" />
   <meta name="keywords" content="Wafflestudio, 와플스튜디오, 웹개발, Web Development, snuev, 서울대학교" />
-  <meta name="description" content="와플스튜디오 홈페이지입니다." />
-  <meta name="revised" content="Hoseong Hwang, 30/01/2011" />
+  <meta name="description" content="맛있는 웹을 만드는 동아리, 와플스튜디오입니다." />
+  <meta name="author" content="wafflestudio" />
+  <meta name="publisher" content="Hoseong Hwang" />
   <%= csrf_meta_tag %>
   <!--[if IE]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
