working on project section
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@61 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -55,6 +55,12 @@
         </td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>Featured</strong></td>
+				<td class="last">
+					<%= file_field_tag 'project[featured_img]' %><br />
+        </td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>스크린샷</strong></td>
 				<td class="last">
           <% for i in (1..5) %>
