--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
   <!--[if IE]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <%= stylesheet_link_tag ['reset', 'style', 'tipsy', 'nivo-slider', 'colorbox', 'impromptu', 'slider'] %>
+  <%= stylesheet_link_tag ['reset', 'style', 'tipsy', 'nivo-slider', 'colorbox', 'impromptu', 'slider', 'aga'] %>
 	<!--[if lt IE 8]>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/ie7-and-down.css" />
 	<![endif]-->
   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag :jquery %>
-  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'application'] %>
+  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'aga.min', 'application'] %>
 </head>
 <body>
   <div id="container">
