--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	<![endif]-->
   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag :jquery %>
-  <%= javascript_include_tag ['jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'aga.min', 'application'] %>
+  <%= javascript_include_tag ['jquery.easing', 'jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'aga.min', 'application'] %>
 </head>
 <body>
   <div id="container">
