--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -55,6 +55,12 @@
         </td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>Logo</strong></td>
+				<td class="last">
+					<%= file_field_tag 'project[logo_img]' %><br />
+        </td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>Featured</strong></td>
 				<td class="last">
 					<%= file_field_tag 'project[featured_img]' %><br />
