--- a/app/views/admin/projects/_form_edit.html.erb
+++ b/app/views/admin/projects/_form_edit.html.erb
@@ -55,6 +55,17 @@
         </td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>Logo</strong></td>
+				<td class="last">
+          <% unless @project.logo.nil? %>
+            <%= image_tag @project.logo.image.url(:thumb) %>
+            <%= @project.logo.image_file_name %>
+            <%= link_to image_tag('admin/hr.gif'), admin_screenshots_path(@project.logo), :confirm => 'Are you sure?', :method => :delete %><br />
+          <% end %>
+					<%= file_field_tag 'project[logo_img]' %><br />
+        </td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>Featured</strong></td>
 				<td class="last">
           <% unless @project.featured.nil? %>
