--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -547,6 +547,15 @@ a.nivo-prevNav {
 	top: 18px;
 	right: 28px;
 }
+#projects h2 {
+	width: 240px;
+	height: 21px;
+	text-indent: -9999px;
+	background: url(/images/sub_projects.png) no-repeat;
+	position: absolute;
+	top: 110px;
+	right: 28px;
+}
 #projects nav.navigation {
 	top: 20px;
 	border: 1px solid #4e361a;
@@ -566,18 +575,45 @@ a.nivo-prevNav {
 }
 #project_list {
 	position: absolute;
-	top: 240px;
+	top: 242px;
 	left: 50%;
-	margin-left: -325px;
+	margin-left: -327px;
 	width: 650px;
 	height: 300px;
+	border: 1px solid #492803;
 }
 #project_list li {
 	width: 600px;
 	height: 300px;
+	cursor: pointer;
 	-moz-box-shadow:0 0 10px #000;
 	-webkit-box-shadow:0 0 10px #000;
 	box-shadow:0 0 10px #000;
+}
+#projects .project_overlay {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  opacity: 0.8;
+  filter: alpha(opacity=80); /* IE lt 8 */
+  -ms-filter: "alpha(opacity=80)"; /* IE 8 */
+  -khtml-opacity: .80; /* Safari 1.x */
+  -moz-opacity: .80; /* FF lt 1.5, Netscape */
+}
+#projects .project_name {
+  background: url(/images/backgrounds/black_bg.png);
+  color: white;
+  padding: 10px 15px;
+  float: left;
+  margin-bottom: 3px;
+}
+#projects .project_subtitle {
+  font-size: 14px;
+  background: url(/images/backgrounds/black_bg.png);
+  color: white;
+  padding: 4px 7px;
+  float: left;
+  clear: left;
 }
 .project_popup {
   width: 850px;
